@@ -1,3 +1,8 @@
+2024-12-14 Philipp Klaus Krause <philipp@colecovision.eu>
+
+	* support/regression/tests/typeof_retfptr.c:
+	  Test for a function pointer idiom becoming popular with C23.
+
 2024-12-13 Philipp Klaus Krause <philipp@colecovision.eu>
 
 	* src/SDCCicode.c:
